# h4g-growing-cultures-api

./: Cargo.toml  create-example-tours.py  flake.nix  justfile  swagger.yaml
crates/growingcultures-api/: Cargo.toml
crates/growingcultures-api/src/: lib.rs  modify.rs
crates/growingcultures-core/: Cargo.toml
crates/growingcultures-core/src/: lib.rs  parser.rs
crates/growingcultures-core/tests/: parse_info_nodes.rs
crates/growingcultures-server/: Cargo.toml
crates/growingcultures-server/src/: application.rs  lib.rs  main.rs  tracing.rs
docs/: index.html
examples/: tour-game.json  tour-website.json  tour.json
raw/: Balkan.html  England.html  Italien.html  treelist.csv
