[workspace]
members = [
  "crates/growingcultures-api",
  "crates/growingcultures-core",
  "crates/growingcultures-server",
]

[workspace.package]
authors = ["Dominik Kellner <dkellner@dkellner.de>"]
license = "AGPL-3.0"

[workspace.dependencies]
anyhow = "1.0.65"
growingcultures-api = { path = "crates/growingcultures-api" }
growingcultures-server = { path = "crates/growingcultures-server" }
axum = "0.5.16"
log = "0.4.17"
once_cell = "1.15.0"
nom = "7.1.1"
pulldown-cmark = "0.9.2"
reqwest = { version = "0.11.12", features = ["json"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
tokio = { version = "1.21.2", features = ["full"] }
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
url = { version = "2.3.1", features = ["serde"] }
utoipa = { version = "2.2.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "2.0.1", features = ["axum"] }
