[package]
name = "growingcultures-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
growingcultures-api.workspace = true
axum.workspace = true
log.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true

[dev-dependencies]
once_cell.workspace = true
reqwest.workspace = true
serde_json.workspace = true
